--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
         "@0x/utils": "^3.0.1",
         "@0x/web3-wrapper": "^3.2.4",
         "@babel/polyfill": "^7.0.0",
+        "@types/dotenv": "^6.1.0",
         "body-parser": "^1.18.3",
         "cors": "^2.8.5",
+        "dotenv": "^6.2.0",
         "express": "^4.16.3",
         "express-async-handler": "^1.1.4",
         "forever": "^0.15.3",
